stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0015_float_neg_exponent.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0015_float_neg_exponent.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
2.0e-5
stderr:
<empty>
