stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0018_char_simple.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0018_char_simple.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
a
stderr:
<empty>
