stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0020_unit.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0020_unit.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
()
stderr:
<empty>
