stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0032_sub_two_ints.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0032_sub_two_ints.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
2
stderr:
<empty>
