stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0036_add_chain.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0036_add_chain.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
6
stderr:
<empty>
