stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0037_mul_precedence.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0037_mul_precedence.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
7
stderr:
<empty>
