stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0060_not_comparison.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0060_not_comparison.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
true
stderr:
<empty>
