stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0072_if_condition_expr.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0072_if_condition_expr.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
yes
stderr:
<empty>
